# edu

./: .gitignore  README.md  main.py  pyproject.toml
docs/: 00_basics_patterns.md  02_sorting.md  07_dynamic_programming.md  08_graph.md
docs/coding_test/: 01_data_structures.md  03_brute_force.md  04_greedy.md  05_dfs_bfs.md  06_binary_search.md
docs/data_handling/: 20_numpy.md  21_pandas.md  22_visualization.md
docs/ml/: 30_classification.md  31_regression.md  32_preprocessing.md  33_evaluation.md
docs/sql/: 09_chinook_overview.md  10_select.md  11_aggregate.md  12_join.md  13_subquery.md  14_window.md
docs/titanic/: 40_eda.md  41_preprocessing_model.md  42_evaluation_submission.md
notebooks/: 00_basics_patterns.ipynb  01_data_structures.ipynb  02_sorting.ipynb  04_greedy.ipynb
notebooks/coding_test/: 00_basics_patterns.ipynb  00a_math.ipynb  02_sorting.ipynb  03_brute_force.ipynb  04_greedy.ipynb  05_dfs_bfs.ipynb  06_binary_search.ipynb  07_dynamic_programming.ipynb  08_graph.ipynb
notebooks/data_handling/: 20_numpy.ipynb  21_pandas.ipynb  22_visualization.ipynb
notebooks/ml/: 30_classification.ipynb  31_regression.ipynb  32_preprocessing.ipynb  33_evaluation.ipynb
notebooks/sql/: 09_chinook_overview.ipynb  10_select.ipynb  11_aggregate.ipynb  12_join.ipynb  13_subquery.ipynb  14_window.ipynb
notebooks/titanic/: 40_eda.ipynb  41_preprocessing_model.ipynb  42_evaluation_submission.ipynb
scripts/: create_readonly_user.sql  load_berka.py
