[project]
name = "edu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "ipython>=9.14.1",
    "jupyter>=1.1.1",
    "kaggle>=2.2.2",
]
